methods.args.MethodsArgs.scala.error
Compilation error:
MethodsArgs:3: error: not found: value x
  x=stepCount
  ^MethodsArgs:4: error: ambiguous reference to overloaded definition,
both method forward in class MethodsArgs of type (i: Int)Unit
and  method forward in class AbstractBuggle of type ()Unit
match expected type ?
  if (forward=true){
      ^MethodsArgs:5: error: not found: value x
    for (i <- 1 to x){forward();}
                   ^MethodsArgs:8: error: not found: value x
    for (i <- 1 to x){backward();}
                   ^