methods.args.MethodsArgs.scala.code
def move(stepCount:Int, forward:Boolean)=
	x=stepCount
	if (forward=true){
		for (i <- 1 to x){forward();}
  }
	else{
    for (i <- 1 to x){backward();}
  }